<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Holo.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:scrollbarStyle="insideOverlay"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context = ".detail.DetailFragment"
        android:paddingBottom="10dp">

        <!-- title -->
        <TextView
            android:id="@+id/tittle_text_view"
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_view"
            android:backgroundTint="@color/gardens_by_the_bay"
            android:elevation="@dimen/cardview_default_radius"
            android:text="@string/singapur_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <!-- gardens_by_the_bay_0 image  -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:elevation="4dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle_text_view">

            <ImageView
                android:id="@+id/location_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/singapur_location"
                android:cropToPadding="true"
                android:elevation="@dimen/cardview_default_radius"
                app:srcCompat="@drawable/singapur_presentacion"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <!-- gardens by the bay description -->
        <TextView
            android:id="@+id/description_text_view"
            style="@style/text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_view"
            android:backgroundTint="@color/white"
            android:elevation="4dp"
            android:text="@string/singapur_description"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/near_places_linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_corner_view"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="44dp"
                android:layout_height="48dp"
                android:layout_marginStart="14dp"
                android:contentDescription="@string/horario"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/schedule_text_view"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/horario"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.428" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/direccion"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/schedule_text_view"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_access_time_24" />

            <TextView
                android:id="@+id/location_text_view"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/direccion"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- temperature -->

        <LinearLayout
            android:id="@+id/recomendation_linear_layout"
            style="@style/text_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_view"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/near_places_linear_layout">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/recomendacion"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/recomendation_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recomendacion_vestir"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/near_linear_layout"
            style="@style/text_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_view"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recomendation_linear_layout">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sitios_cercanos"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/near_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otros_sitios"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>